# Redes-Auto

./: .env.example  .gitignore  .replit  DASHBOARD_COMPLETO.md  DYNAMIC_FEATURES.md  INSTALACION_Y_CONFIGURACION.md  INSTRUCCIONES_PARA_COLABORADOR.md  PERSONAS_REALISTAS_UPDATE.md  README.md  SOLUCION_CODIFICACION_VIDEOS.md  app.py  app_flask.py  build_exe.py  dashboard.spec  fix_video_encoding.py  launcher.py  pyproject.toml  replit.md  requirements.txt  run_dashboard.bat  setup.py  simple_launcher.py  standalone_app.py  test_new_video_generation.py  test_video_encoding.py
.streamlit/: config.toml
assets/watermarks/: .gitkeep
config/: api_config.py  free_api_alternatives.py  scheduler_config.json  settings.py  user_settings.json
made by grok/: app_by_grok.py  file_manager_by_grok.py  instagram_publisher_by_grok.py  scheduler_by_grok.py  video_processor_by_grok.py
templates/: api_status.html  auto_scheduler.html  base.html  free_apis.html  generate_ai_videos.html  index.html  instagram_publisher.html  instagram_stats.html  manage_library.html  process_videos.html  settings.html  upload_videos.html
utils/: ai_image_generator.py  ai_script_generator.py  dependency_manager.py  dynamic_image_generator.py  dynamic_video_processor.py  file_manager.py  instagram_api.py  instagram_publisher.py  multi_api_manager.py  scheduler.py  script_analyzer.py  subtitle_generator.py  telegram_bot.py  tts_local.py  video_processor.py  video_templates.py
videos/pending/: .gitkeep
videos/processed/: .gitkeep
videos/published/: .gitkeep
